[gd_scene load_steps=32 format=3 uid="uid://c8dsxq4vjsr5g"]

[ext_resource type="Texture2D" uid="uid://ct0obvmfp0hkn" path="res://textures/banana.png" id="1_g477y"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_ugeij"]
[ext_resource type="Script" path="res://scripts/bananacounter.gd" id="2_7cqsc"]
[ext_resource type="Theme" uid="uid://dxb6tg8jo2m80" path="res://ui_theme.tres" id="2_cwosx"]
[ext_resource type="Texture2D" uid="uid://dty53xo48chtr" path="res://textures/jungle.jpg" id="2_mms3p"]
[ext_resource type="Script" path="res://scripts/bananabutton.gd" id="3_6d03r"]
[ext_resource type="Script" path="res://scripts/bananarate.gd" id="3_nls3j"]
[ext_resource type="Texture2D" uid="uid://c5voryyd2trs3" path="res://textures/banana_press.png" id="4_eidad"]
[ext_resource type="Texture2D" uid="uid://dxx22crjc56ju" path="res://textures/banana_hover.png" id="5_ynmet"]
[ext_resource type="Script" path="res://scripts/producers.gd" id="7_iuqen"]
[ext_resource type="Script" path="res://scripts/wageslabel.gd" id="10_ea8bh"]
[ext_resource type="Resource" uid="uid://3c75y275fa" path="res://producers/0_banana_farm.tres" id="12_lkapd"]
[ext_resource type="Resource" uid="uid://stqibj4npgjl" path="res://producers/1_banana_printer.tres" id="13_jlhhh"]
[ext_resource type="Resource" uid="uid://b6sd5v0yj8uuo" path="res://producers/2_banana_goblin.tres" id="14_74qpk"]
[ext_resource type="Script" path="res://scripts/upgrades.gd" id="15_gdv75"]
[ext_resource type="Resource" uid="uid://b820phqhsttcd" path="res://producers/3_banana_finder.tres" id="15_i7kyh"]
[ext_resource type="Resource" uid="uid://mkxrpooy3q06" path="res://producers/4_banana_generator.tres" id="16_phifn"]
[ext_resource type="Resource" uid="uid://iw0dupf6a7r8" path="res://upgrades/bananapicker.tres" id="16_rbajd"]
[ext_resource type="Resource" uid="uid://h6yls7x4lhfs" path="res://upgrades/worker.tres" id="17_2ytca"]
[ext_resource type="Resource" uid="uid://dl5lmmxcvwclr" path="res://producers/5_banana_bank.tres" id="17_c1c1b"]
[ext_resource type="Resource" uid="uid://chgl8jwshefqy" path="res://upgrades/bananagatherer.tres" id="18_3hefm"]
[ext_resource type="Resource" uid="uid://ui502eh4t0vv" path="res://producers/6_banana_dog.tres" id="18_7cu5o"]
[ext_resource type="PackedScene" uid="uid://rasrwyhpxe71" path="res://uielements/revolution_info.tscn" id="19_boofn"]
[ext_resource type="Resource" uid="uid://cd7meo37fa8j5" path="res://producers/7_banana_truck.tres" id="19_tdmb8"]
[ext_resource type="Resource" uid="uid://btby5g1y8xaea" path="res://upgrades/robotic_workers.tres" id="21_08obn"]
[ext_resource type="Script" path="res://scripts/event_manager.gd" id="21_uuqc4"]
[ext_resource type="PackedScene" uid="uid://cui5c27hsn2dh" path="res://uielements/menu.tscn" id="23_nntga"]
[ext_resource type="PackedScene" uid="uid://uk7nr67yt0jr" path="res://uielements/reset_panel.tscn" id="24_3jpqu"]
[ext_resource type="Script" path="res://scripts/version_label.gd" id="26_qbjkr"]

[sub_resource type="Gradient" id="Gradient_sl6b2"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.45098)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d2ufh"]
gradient = SubResource("Gradient_sl6b2")

[node name="Main" type="Node"]
script = ExtResource("1_ugeij")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cwosx")
texture = ExtResource("2_mms3p")
stretch_mode = 6

[node name="Shade" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cwosx")
texture = SubResource("GradientTexture1D_d2ufh")
stretch_mode = 6

[node name="GUIColumns" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_cwosx")

[node name="BananaColumn" type="VBoxContainer" parent="GUIColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BananaCounter" type="Label" parent="GUIColumns/BananaColumn"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "1234 Bananas"
script = ExtResource("2_7cqsc")

[node name="BananaRate" type="Label" parent="GUIColumns/BananaColumn"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "36 bananas per second"
script = ExtResource("3_nls3j")

[node name="BananaButton" type="TextureButton" parent="GUIColumns/BananaColumn"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_g477y")
texture_pressed = ExtResource("4_eidad")
texture_hover = ExtResource("5_ynmet")
stretch_mode = 0
script = ExtResource("3_6d03r")

[node name="Wages" type="Label" parent="GUIColumns/BananaColumn"]
visible = false
layout_mode = 2
theme = ExtResource("2_cwosx")
theme_type_variation = &"HeaderMedium"
text = "Paying 321 bananas per second in wages to workers"
autowrap_mode = 3
script = ExtResource("10_ea8bh")

[node name="ProducersColumn" type="VBoxContainer" parent="GUIColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="Label" parent="GUIColumns/ProducersColumn"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Producers"

[node name="ScrollContainer" type="ScrollContainer" parent="GUIColumns/ProducersColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="Producers" type="VBoxContainer" parent="GUIColumns/ProducersColumn/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("7_iuqen")
producers = Array[Resource("res://resourcetypes/producer.gd")]([ExtResource("12_lkapd"), ExtResource("13_jlhhh"), ExtResource("14_74qpk"), ExtResource("15_i7kyh"), ExtResource("16_phifn"), ExtResource("17_c1c1b"), ExtResource("18_7cu5o"), ExtResource("19_tdmb8")])

[node name="UpgradesColumn" type="VBoxContainer" parent="GUIColumns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Header" type="Label" parent="GUIColumns/UpgradesColumn"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Upgrades"

[node name="ScrollContainer" type="ScrollContainer" parent="GUIColumns/UpgradesColumn"]
layout_mode = 2
size_flags_vertical = 3

[node name="Upgrades" type="VBoxContainer" parent="GUIColumns/UpgradesColumn/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("15_gdv75")
upgrades = Array[Resource("res://resourcetypes/upgrade.gd")]([ExtResource("16_rbajd"), ExtResource("17_2ytca"), ExtResource("18_3hefm"), ExtResource("21_08obn")])

[node name="RevolutionInfo" parent="." instance=ExtResource("19_boofn")]
visible = false

[node name="Menu" parent="." instance=ExtResource("23_nntga")]
visible = false

[node name="ResetPanel" parent="." instance=ExtResource("24_3jpqu")]
visible = false

[node name="EventManager" type="Node" parent="."]
script = ExtResource("21_uuqc4")

[node name="VersionLabel" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
text = "v0"
script = ExtResource("26_qbjkr")

[connection signal="pressed" from="GUIColumns/BananaColumn/BananaButton" to="GUIColumns/BananaColumn/BananaButton" method="_on_pressed"]
